2011-03-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Make class WordStack methods inline.

	* src/worddef.h (wordStateType):
	  - Simply name the struct type "wordState" and remove typedef'd type.
	  - Add c-tors for instantiation convenience.
	* src/wordstack.h (class WordStack):
	  - Replace "wordStateType" type with "wordState".
	  - Make all methods inline. They are all short functions.
	* src/Makefile.am, -src/wordstack.cpp:
	  - Remove the now-unused source file.
	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	* src/longwordseg.cpp (LongWordSeg::CreateSentence):
	  - Replace "wordStateType" type with "wordState".

2011-03-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Change the dictionary search order & mechanism.

	* src/swath.1: Document the new behavior.
	* src/wordseg.cpp (InitWordSegmentation):
	  - Implement the search order here instead of in main, so the
	    wordseg object is created and destroyed only once.
	  - WORDSEGDATA env is now changed to SWATHDICT.
	* src/wordseg.cpp (main):
	  - Call InitWordSegmentation() only once and let the multiple
	    trials happen there.

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::AbsWordSeg):
	* src/wordseg.cpp (main):
	  - Print errors on stderr, not stdout.

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main): Rename 'wsegpath' var to 'dictpath'.

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Enhance -d option to also accept a trie file.

	* src/abswordseg.h, src/abswordseg.cpp
	  (AbsWordSeg::AbsWordSeg, +AbsWordSeg::InitDict):
	  - Make dictionary opening be a normal method to be called after
	    construction, so the return state can be checked.
	  - Check if the path is a regular file or directory. If it's a
	    directory, append usual dict file name to it before opening.
	* src/maxwordseg.h, src/maxwordseg.cpp:
	* src/longwordseg.h, src/longwordseg.cpp: